<?xml version="1.0"?>
<package format="2">
  <name>eigen_340_wrapper</name>
  <version>0.0.0</version>
  <description>Specifically wraps Eigen 3.4. Downloads it here if not found.</description>

  <maintainer email="author@todo.todo">author</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
