<?xml version="1.0"?>
<package format="2">
  <name>pytorch_encoding_wrapper</name>
  <version>0.0.0</version>
  <description>Wraps the PyTorch Encoding networks by Hang Zhang for use with sel_map.</description>

  <maintainer email="author@todo.todo">author</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
