<?xml version="1.0"?>
<package format="2">
  <name>sel_map_segmentation</name>
  <version>0.0.0</version>
  <description>The sel_map_segmentation package</description>

  <maintainer email="author@todo.todo">author</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospkg</exec_depend>
</package>
